fix(ci): update Nx test command to use `--coverage` instead of `--codeCoverage`

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,7 +74,7 @@ jobs:
                   else
                     # On Merge: Run everything to be safe
                     npx nx run-many --targets=lint,typecheck,build --parallel=3
-                    npx nx run-many --targets=test --parallel=3 --codeCoverage
+                    npx nx run-many --targets=test --parallel=3 --coverage
                   fi
 
             - name: Upload API coverage
