--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -126,6 +126,10 @@ jobs:
             - name: Install dependencies
               run: npm ci --ignore-scripts
 
+            - name: Get Current Version
+              id: current_version
+              run: echo "version=$(jq -r .version package.json)" >> $GITHUB_OUTPUT
+
             - name: Semantic Release (No Push)
               id: semantic
               run: |
@@ -134,13 +138,23 @@ jobs:
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+            - name: Check if Release Published
+              id: check_release
+              run: |
+                  NEW_VERSION=$(jq -r .version package.json)
+                  if [ "$NEW_VERSION" != "${{ steps.current_version.outputs.version }}" ]; then
+                      echo "released=true" >> $GITHUB_OUTPUT
+                  else
+                      echo "released=false" >> $GITHUB_OUTPUT
+                  fi
+
             - name: Extract Version
               id: version
-              if: steps.semantic.outputs.new-release-published == 'true'
+              if: steps.check_release.outputs.released == 'true'
               run: echo "version=$(jq -r .version package.json)" >> $GITHUB_OUTPUT
 
             - name: Commit Release Files
-              if: steps.semantic.outputs.new-release-published == 'true'
+              if: steps.check_release.outputs.released == 'true'
               run: |
                   git config --global user.name "github-actions[bot]"
                   git config --global user.email "github-actions[bot]@users.noreply.github.com"
@@ -151,7 +165,7 @@ jobs:
                   git push -f origin HEAD
 
             - name: Create Release PR
-              if: steps.semantic.outputs.new-release-published == 'true'
+              if: steps.check_release.outputs.released == 'true'
               run: |
                   gh pr create \
                     --base main \
