--- a/api/package.json
+++ b/api/package.json
@@ -40,9 +40,11 @@
         "@types/graphql-depth-limit": "^1.1.6",
         "@types/jsonwebtoken": "^9.0.10",
         "@types/morgan": "^1.9.9",
+        "@types/supertest": "^6.0.3",
         "@types/uuid": "^10.0.0",
         "@types/ws": "^8.18.1",
         "cli-progress": "^3.12.0",
+        "supertest": "^7.1.4",
         "tsx": "^4.20.6",
         "typescript": "^5.9.3"
     },
