--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -57,8 +57,6 @@ jobs:
               if: startsWith(github.event.pull_request.title, 'chore(release):')
               run: |
                   BRANCH_NAME="${{ github.event.pull_request.head.ref }}"
-                  if gh api repos/${{ github.repository }}/branches/$BRANCH_NAME --silent 2>/dev/null; then
-                      gh api -X DELETE repos/${{ github.repository }}/branches/$BRANCH_NAME
-                  fi
+                  gh api -X DELETE repos/${{ github.repository }}/branches/$BRANCH_NAME || true
               env:
                   GITHUB_TOKEN: ${{ secrets.GH_BOT_PAT }}
