--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -51,12 +51,4 @@ jobs:
               run: gh pr merge "$PR_URL" --auto --merge --delete-branch
               env:
                   PR_URL: ${{ github.event.pull_request.html_url }}
-                  GITHUB_TOKEN: ${{ secrets.GH_BOT_PAT }}
-
-            - name: Delete Release Branch
-              if: startsWith(github.event.pull_request.title, 'chore(release):')
-              run: |
-                  BRANCH_NAME="${{ github.event.pull_request.head.ref }}"
-                  gh api -X DELETE repos/${{ github.repository }}/branches/$BRANCH_NAME || true
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GH_BOT_PAT }}
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
